fix: mis-alignment on checkmark with `text-align: center | right`

--- a/components/checkbox/src/styles/auro-checkbox.scss
+++ b/components/checkbox/src/styles/auro-checkbox.scss
@@ -98,8 +98,9 @@ fieldset {
 
 .svg--cbx {
   position: absolute;
-  padding-top: 3px;
-  padding-bottom: 3px;
+  left: 0;
+  top: 3px;
+  bottom: 3px;
 
   z-index: 1;
   pointer-events: none;
